# traverse

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  quickstart.md
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  cla.yml  journal-operational-limits.yml  nightly.yml  publish.yml  supply-chain.yml
.specify/memory/: constitution.md  readme-principles.md
apps/macos-demo/: README.md
apps/traverse-starter/: app.manifest.json
benchmarks/: run.sh
ci/: coverage-targets.txt
crates/traverse-cli/: Cargo.toml
crates/traverse-cli/src/: agent_packages.rs  browser_adapter.rs  federation_operator.rs  http_api.rs  main.rs  supply_chain.rs
crates/traverse-contracts/: Cargo.toml
crates/traverse-contracts/src/: lib.rs
crates/traverse-contracts/tests/: validation.rs
crates/traverse-embedder/: Cargo.toml  README.md
crates/traverse-embedder/src/: lib.rs  test_double.rs
crates/traverse-embedder/tests/: conformance.rs  package.rs
crates/traverse-embedder/tests/common/: mod.rs
crates/traverse-mcp/: Cargo.toml
crates/traverse-mcp/src/: lib.rs  main.rs  stdio_server.rs
crates/traverse-mcp/tests/: mcp_tests.rs
crates/traverse-native-bridge/: Cargo.toml
crates/traverse-native-bridge/src/: main.rs
crates/traverse-registry/: Cargo.toml
crates/traverse-registry/src/: application_manifest.rs  dependency_resolver.rs  events.rs  federation.rs  graph.rs  lib.rs  model_resolution.rs  native_runtime_artifact.rs  public_registry_cache.rs  public_registry_state.rs  semver_resolver.rs  workflows.rs  workspace_app_state.rs
crates/traverse-registry/tests/: application_manifest.rs  registry.rs
crates/traverse-runtime/: Cargo.toml
crates/traverse-runtime/examples/: journal_operational_limits.rs  load_workspace_app_state.rs
crates/traverse-runtime/src/: artifact_router.rs  data_store.rs  inference.rs  lib.rs  security.rs  workflows.rs
crates/traverse-runtime/src/events/: broker.rs  durable.rs  journal.rs  mod.rs  types.rs
crates/traverse-runtime/src/executor/: mod.rs  thread_pool.rs  wasm.rs
crates/traverse-runtime/src/trace/: private.rs
crates/traverse-runtime/tests/: compatible_bridge_conformance.rs  doc_approval_pipeline.rs  event_broker_tests.rs  executor_tests.rs  expedition_wasm_tests.rs  inference_tests.rs  native_bridge_conformance.rs  placement_tests.rs  router_tests.rs  runtime.rs  thread_pool_integration.rs  thread_pool_stress.rs
crates/traverse-swift-host/: Cargo.toml
crates/traverse-swift-host/include/: module.modulemap  traverse_swift_host.h
crates/traverse-swift-host/src/: lib.rs
docs/: ai-review-process.md  antipatterns.md  app-consumable-acceptance.md  app-consumable-consumer-bundle.md  app-consumable-entry-path.md  app-consumable-release-checklist.md  app-consumable-requirements-traceability.md  app-state-machine-runtime.md  architecture-execution-models.md  blog-native-ios-runtime-foundation-brief.md  blog-native-ios-runtime-foundation-hands-on.md  browser-adapter.md  capability-contract-authoring-guide.md  cli-reference.md  compatibility-policy.md  decision-log.md  downstream-app-mvp-conformance.md  durable-event-journal-operational-limits.md  event-contract-authoring-guide.md  event-publishing-tutorial.md  exception-process.md  expedition-example-authoring.md  expedition-example-registry-bundle.md  getting-started.md  local-preflight.md  local-runtime-home.md  mcp-consumption-validation.md  mcp-stdio-server.md  model-dependency-authoring-guide.md  multi-thread-workflow.md  native-runtime-artifact-registry.md  planning-board.md  project-management.md  quality-standards.md  registry-bundle-authoring-guide.md  release-process.md  repo-migration-plan.md  runtime-target-matrix.md  spec-reviewer-guide.md  swift-host-device-test.md  (+19 more)
docs/adr/: 0002-registry-contract-materialization.md  0003-production-artifact-routing.md  0004-offline-sigstore-verification.md  0005-durable-identity-events.md  0006-durable-journal-retention-and-write-limits.md  0007-native-runtime-wasm-bridge.md  0008-compatible-lifecycle-bridge.md  0009-retain-durable-journal-after-operational-evaluation.md  0010-native-embedder-release-baseline.md  0011-agent-artifact-stdout-only.md  0011-native-runtime-distribution-channel.md  0011-swift-native-resource-controls.md  0012-native-runtime-distribution-channel.md  0013-scoped-c-abi-boundary.md  0014-wasmi-apple-runtime-profile.md  0015-production-swift-wasmi-c-abi.md  0016-embedded-trace-api-companion-surface.md  0017-durable-local-datastore.md  0017-durable-trace-journal.md  0018-swift-host-coverage-gate-policy.md  README.md
docs/evidence/: journal-operational-limits-2026-07-15.json  swift-native-resource-controls-2026-07-19.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.7.0.md  v0.8.0.md  v0.8.1.md
examples/fixtures/: expedition-runtime-session.json
examples/hello-world/: README.md
examples/swift-wasmi-proof/: main.swift
runtime/: runtime-release.json  runtime.wasm
scripts/: build_swift_host_xcframework.sh  swift_host_macos_smoke.sh
scripts/ci/: app_consumable_acceptance.sh  app_consumable_release_prep.sh  app_ownership_boundary_smoke.sh  browser_adapter_smoke.sh  bump_version.sh  contractual_enforcement_gate.sh  coverage_gate.sh  downstream_app_mvp_conformance.sh  downstream_http_json_smoke.sh  downstream_public_app_registration_smoke.sh  expedition_execution_smoke.sh  expedition_golden_path.sh  expedition_trace_smoke.sh  hello_world_example_smoke.sh  install_pre_push_hook.sh  journal_operational_summary.py  journal_storage_pressure.py  local_preflight.sh  macos_demo_smoke.sh  meeting_notes_example_smoke.sh  native_artifact_certification.sh  openapi_structural_validation.sh  project_state_audit.sh  publish_crates.sh  repository_checks.sh  runtime_home_smoke.sh  rust_checks.sh  scoped_unsafe_boundary_check.sh  supply_chain_check.sh  traverse_starter_example_smoke.sh  v1_gate_check.sh  wasi_host_abi_imports.sh  wasm_agent_example_smoke.sh  (+4 more)
specs/: README.md
(+154 files in other folders)
