[workspace]
members = [
  "crates/traverse-cli",
  "crates/traverse-contracts",
  "crates/traverse-expedition-wasm",
  "crates/traverse-mcp",
  "crates/traverse-registry",
  "crates/traverse-runtime",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/enricopiovesan/Traverse"
rust-version = "1.94"
version = "0.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[workspace.metadata.cyclonedx]
all_features = true
format = "json"
output = "traverse-sbom.cdx.json"
