[workspace]
members = [
  "crates/traverse-cli",
  "crates/traverse-contracts",
  "crates/traverse-embedder",
  "crates/traverse-expedition-wasm",
  "crates/traverse-mcp",
  "crates/traverse-native-bridge",
  "crates/traverse-registry",
  "crates/traverse-runtime",
  "crates/traverse-swift-host",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/traverse-framework/traverse"
rust-version = "1.94"
version = "0.8.2"

[workspace.dependencies]
traverse-contracts = { path = "crates/traverse-contracts", version = "0.8.2" }
traverse-registry = { path = "crates/traverse-registry", version = "0.8.2" }
traverse-runtime = { path = "crates/traverse-runtime", version = "0.8.2" }

[workspace.lints.rust]
# C-ABI exports are permitted only in the audited Apple feasibility boundary.
# `scripts/ci/scoped_unsafe_boundary_check.sh` verifies that no other crate
# can opt out of this workspace policy.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[workspace.metadata.cyclonedx]
all_features = true
format = "json"
output = "traverse-sbom.cdx.json"
