[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
qrcode = { version = "0.14.1", default-features = false }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
traverse-contracts = { path = "../traverse-contracts", version = "0.7.0" }
traverse-registry = { path = "../traverse-registry", version = "0.7.0" }
traverse-runtime = { path = "../traverse-runtime", version = "0.7.0" }

[lints]
workspace = true
