[package]
name = "traverse-cli-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Traverse — register, list, validate, and run governed capabilities"

[[bin]]
name = "traverse-cli"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "3.0.0"
qrcode = { version = "0.14.1", default-features = false }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11"
zeroize = "1.8"
traverse-contracts = { workspace = true }
traverse-registry = { workspace = true }
traverse-runtime = { workspace = true }

[lints]
workspace = true
