[package]
name = "traverse-embedder"
description = "Public Traverse platform embedder SDK for Rust hosts (Linux GTK and CLI clients), implementing embedder-api/1.0.0"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = "1.0.145"
traverse-registry = { workspace = true }
traverse-runtime = { workspace = true }

[dev-dependencies]
sha2 = "0.11"
wat = "1"

[lints]
workspace = true
