[package]
name = "traverse-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "traverse-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
traverse-contracts = { path = "../traverse-contracts", version = "0.7.0" }
traverse-registry = { path = "../traverse-registry", version = "0.7.0" }
traverse-runtime = { path = "../traverse-runtime", version = "0.7.0" }

[lints]
workspace = true
