[package]
name = "traverse-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "traverse-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
traverse-contracts = { workspace = true }
traverse-registry = { workspace = true }
traverse-runtime = { workspace = true }

[lints]
workspace = true
