[package]
name = "traverse-native-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic builder for the governed native runtime WebAssembly bridge."

[dependencies]
sha2 = "0.11"
wat = "1"

[lints]
workspace = true
