[package]
name = "traverse-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
traverse-contracts = { path = "../traverse-contracts", version = "0.7.0" }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11"

[dev-dependencies]
[lints]
workspace = true
