[package]
name = "traverse-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
traverse-contracts = { workspace = true }
traverse-registry = { workspace = true }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11"
ed25519-dalek = "3.0.0"
zeroize = "1.8"
wasmtime = { version = "44", features = ["cranelift", "component-model"], optional = true }
wasmtime-wasi = { version = "44", optional = true }
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = { version = "1.11", optional = true }

[features]
default = ["native-executors", "wasmtime-executor"]
native-executors = ["dep:rayon"]
wasmtime-executor = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dev-dependencies]
wat = "1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
