[package]
name = "traverse-swift-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Apple static-library feasibility host for the Traverse runtime bridge."

[lib]
crate-type = ["staticlib"]

[dependencies]
wasmi = { version = "1.1.0", default-features = false }
wat = "1"
sha2 = "0.11"
serde_json = "1.0.145"

[lints]
workspace = true
